# CookBook

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
cook_book/: ParamsSchemas.py  admin.py  apps.py  celery.py  cook_services.py  models.py  settings.py  tasks.py  urls.py  utils.py  views.py
cook_book/migrations/: 0001_initial.py
templates/: base.html  home.html  recipes_index_without_product.html  table.html
