[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["Dmitry Gorokhov <gorokhov86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.3"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
pydantic = "^2.6.0"
celery = "^5.3.6"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
faker = "^22.5.1"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
